--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,21 @@
+// Top-level build.gradle
+
+buildscript {
+    ext.kotlin_version = '1.9.10'  // Add this line
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // Android Gradle plugin
+        classpath 'com.android.tools.build:gradle:8.1.1'
+        // Kotlin Gradle plugin
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // Google services plugin for Firebase
+        classpath 'com.google.gms:google-services:4.4.2'
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -6,9 +24,11 @@ allprojects {
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+
 subprojects {
     project.evaluationDependsOn(":app")
 }
