--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.1.0
   pin_code_fields: ^8.0.1
-
+  carousel_slider: ^5.1.1
+  firebase_auth: ^6.0.1
+  firebase_core: ^4.0.0
+  cloud_firestore: ^6.0.0
+  image_picker: ^1.1.2
+  flutter_slidable: ^3.1.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
