--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,11 @@ dependencies:
   cloud_firestore: ^6.0.0
   image_picker: ^1.1.2
   flutter_slidable: ^3.1.2
-  
+  google_sign_in: ^6.2.2
+  provider: ^6.1.5+1
+  geolocator: ^14.0.2
+  cached_network_image: ^3.3.1
+  flutter_screenutil: ^5.9.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
